--- a/index.html
+++ b/index.html
@@ -5,16 +5,18 @@
   </head>
   <body>
     <!-- <body>... -->
-<main id="main">
-  <a href="#" onclick="loadIssue();">Load GitHub Issue</a>
-</main>
-<script id="issue-template" type="text/x-handlebars-template">
-  <article>
-    <header><h3>Issue #{{number}} ({{state}})</h3></header>
-    <p>{{body}}</p>
-    <footer><a href="{{url}}">created {{created_at}}</a></footer>
-  </article>
-</script>
+    <main id="main">
+      <a href="#" onclick="loadIssues();">Load GitHub Issue</a>
+    </main>
+    <script id="issue-template" type="text/x-handlebars-template">
+      {{#each this}}
+      <article>
+        <header><h3>Issue #{{number}} ({{state}})</h3></header>
+        <p>{{body}}</p>
+        <footer><a href="{{url}}">created {{created_at}}</a></footer>
+      </article>
+      {{/each}}
+    </script>
     <main id="main">
     </main>
     <script src="handlebars.js"></script>
