--- a/index.html
+++ b/index.html
@@ -9,14 +9,19 @@
       <a href="#" onclick="loadIssues();">Load GitHub Issue</a>
     </main>
     <script id="issue-template" type="text/x-handlebars-template">
-      {{#each this}}
-      <article>
-        <header><h3>Issue #{{number}} ({{state}})</h3></header>
-        <p>{{body}}</p>
-        <footer><a href="{{url}}">created {{created_at}}</a></footer>
-      </article>
-      {{/each}}
-    </script>
+    {{#each this}}
+    <article>
+      <header><h3>Issue #{{number}} ({{state}})</h3></header>
+      <p>{{body}}</p>
+      {{#if comments_count}}
+      <p>{{comments_count}} Comments</p>
+      {{else}}
+      <p>No Comments Yet</p>
+      {{/if}}
+      <footer><a href="{{url}}">created {{created_at}}</a></footer>
+    </article>
+    {{/each}}
+  </script>
     <main id="main">
     </main>
     <script src="handlebars.js"></script>
